# Speech-Summarizer-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  speech_summarizer_ai.spec
packaging/pyinstaller_hooks/: hook-webrtcvad.py
scripts/: run_dev.py
src/speech_summarizer_ai/: __init__.py  __main__.py  app.py
src/speech_summarizer_ai/audio/: __init__.py  backend.py
src/speech_summarizer_ai/controllers/: __init__.py  recording_controller.py
src/speech_summarizer_ai/data/: __init__.py  meetings_repository.py  schema.py
src/speech_summarizer_ai/domain/: __init__.py  meeting.py
src/speech_summarizer_ai/llm/: __init__.py  foundry_local.py  meeting_summarizer.py  prompts.py
src/speech_summarizer_ai/platform_utils/: __init__.py  compat_numpy.py  paths.py  single_instance.py
src/speech_summarizer_ai/settings/: __init__.py  audio.py  llm.py  paths.py  stt.py
src/speech_summarizer_ai/stt/: __init__.py  faster_whisper_engine.py  model_downloader.py  model_layout.py  realtime.py
src/speech_summarizer_ai/ui/: __init__.py  recording_overlay.py
src/speech_summarizer_ai/ui/dialogs/: __init__.py  startup_ai_models.py
src/speech_summarizer_ai/ui/icons/: __init__.py  action_icons.py
src/speech_summarizer_ai/ui/theme/: __init__.py  palette.py  theme_basics.py
src/speech_summarizer_ai/ui/theme/qss/: __init__.py  components.py  popups.py  scrollbars.py
src/speech_summarizer_ai/ui/widgets/: __init__.py  record_control_button.py
src/speech_summarizer_ai/ui/windows/: __init__.py  meeting_detail.py  meeting_summary_list.py  recording_hud.py
tests/: __init__.py  test_package.py
